WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145812
REGRESSION(
r185262
): NetworkCache is in wrong location on OS X
https://bugs.webkit.org/show_bug.cgi?id=145812
Summary
REGRESSION(r185262): NetworkCache is in wrong location on OS X
Antti Koivisto
Reported
2015-06-09 12:41:53 PDT
Version directory is directly under Caches/com.apple.safari.
Attachments
patch
(3.02 KB, patch)
2015-06-09 12:47 PDT
,
Antti Koivisto
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-06-09 12:47:07 PDT
Created
attachment 254591
[details]
patch
Darin Adler
Comment 2
2015-06-09 12:51:43 PDT
Comment on
attachment 254591
[details]
patch r=andersca
Antti Koivisto
Comment 3
2015-06-09 13:14:38 PDT
https://trac.webkit.org/r185374
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug