REGRESSION(r185262): NetworkCache is in wrong location on OS X https://bugs.webkit.org/show_bug.cgi?id=145812

Reviewed by Anders Carlsson.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::legacyPlatformDefaultWebSQLDatabaseDirectory):
(WebKit::WebProcessPool::legacyPlatformDefaultLocalStorageDirectory):
(WebKit::WebProcessPool::legacyPlatformDefaultMediaKeysStorageDirectory):
(WebKit::WebProcessPool::isNetworkCacheEnabled):

    Make sure static functions that use NSUserDefaults call registerUserDefaultsIfNeeded() first.



Canonical link: https://commits.webkit.org/163850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185374 268f45cc-cd09-0410-ab3c-d52691b4dbfc